--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,7 +2,11 @@
 	<button class="dl-trigger">Open Menu</button>
 	<ul class="dl-menu">
 		<li><a href="{{ site.url }}/">Home</a></li>
-		<li>
+		<li><a href="{{ site.url }}/about/"</a><li>
+
+
+<!---------------------------------- About site owner ---------------------------------------->
+<!-- 		<li>
 			<a href="#">About</a>
 			<ul class="dl-submenu">
 				<li>
@@ -41,8 +45,8 @@
 				{% if site.owner.tumblr %}<li>
 					<a href="http://{{ site.owner.tumblr }}.tumblr.com"><i class="fa fa-fw fa-tumblr"></i> Tumblr</a>
 				</li>{% endif %}
-			</ul><!-- /.dl-submenu -->
-		</li>
+			</ul>
+		</li> -->
 		<li>
 			<a href="#">Posts</a>
 			<ul class="dl-submenu">
