--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -462,7 +462,7 @@ header .entry-meta {
 		}
 
 		@media #{$large} {
-			max-width: 1000px;
+			max-width: 1000px; // here to modify the width of the text block on main page
 			margin-top: 50px;
 			margin-left: auto;
 			margin-right: auto;
